# 2D-field-of-view

./: Box.cpp  Box.h  CMakeLists.txt  Circle.cpp  Circle.h  Entity.cpp  Entity.h  Fieldlight.cpp  Fieldlight.h  Game.cpp  Game.h  Handle.cpp  Handle.h  LICENSE  README.md  Spotlight.cpp  Spotlight.h  TextureWrap.cpp  TextureWrap.h  Wall.cpp  Wall.h  main.cpp
